{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 57,
  "lineage": "d446b05e-0986-5b2d-2301-3815b59b07de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "nacl-awx-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:network-acl/acl-0de5b393dd123ad7d",
            "default_network_acl_id": "acl-0de5b393dd123ad7d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0de5b393dd123ad7d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "613206437160",
            "subnet_ids": [],
            "tags": {
              "Name": "NACL-awx-default"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt-awx-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0eb9122359333f9b8",
            "id": "rtb-0eb9122359333f9b8",
            "owner_id": "613206437160",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fb7f6db54890871",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-default"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_internet_gateway.igw-awx",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "sg-awx-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:security-group/sg-02ef66e01b837b2ab",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ef66e01b837b2ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "613206437160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-default"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-natgw-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0323eac1d8b940194",
            "domain": "vpc",
            "id": "eipalloc-0deb1e831c71003fc",
            "network_interface": "eni-057105481cbc897cc",
            "private_dns": "ip-10-0-1-221.us-west-1.compute.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-50-18-83-191.us-west-1.compute.amazonaws.com",
            "public_ip": "50.18.83.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-NATGW-1a-awx"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-natgw-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07e79f71ef1c556a4",
            "domain": "vpc",
            "id": "eipalloc-09fcf4d1a4427fd6c",
            "network_interface": "eni-03a6e25a72e58c093",
            "private_dns": "ip-10-0-2-138.us-west-1.compute.internal",
            "private_ip": "10.0.2.138",
            "public_dns": "ec2-204-236-143-44.us-west-1.compute.amazonaws.com",
            "public_ip": "204.236.143.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-NATGW-1c-awx"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:internet-gateway/igw-04fb7f6db54890871",
            "id": "igw-04fb7f6db54890871",
            "owner_id": "613206437160",
            "tags": {
              "Name": "IGW-awx"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-1a-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0deb1e831c71003fc",
            "id": "nat-0651a0347ce21bb9a",
            "network_interface_id": "eni-057105481cbc897cc",
            "private_ip": "10.0.1.221",
            "public_ip": "50.18.83.191",
            "subnet_id": "subnet-0e1bbf3e1bab2e9e3",
            "tags": {
              "Name": "NATGW-1a-awx"
            }
          },
          "dependencies": [
            "aws_eip.eip-natgw-1a",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-1c-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fcf4d1a4427fd6c",
            "id": "nat-0d90b281cf430ff80",
            "network_interface_id": "eni-03a6e25a72e58c093",
            "private_ip": "10.0.2.138",
            "public_ip": "204.236.143.44",
            "subnet_id": "subnet-0c3257491ab4b63b3",
            "tags": {
              "Name": "NATGW-1c-awx"
            }
          },
          "dependencies": [
            "aws_eip.eip-natgw-1c",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-awx-private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c3da961f1d2a11e2",
            "owner_id": "613206437160",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0651a0347ce21bb9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-private-1a"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1a",
            "aws_nat_gateway.natgw-1a-awx",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-awx-private-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c19887e4b59627e0",
            "owner_id": "613206437160",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d90b281cf430ff80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-private-1c"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1c",
            "aws_nat_gateway.natgw-1c-awx",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-awx-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08ae9632fb6ece279",
            "owner_id": "613206437160",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fb7f6db54890871",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-awx-public"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_internet_gateway.igw-awx",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1a-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08935f31d7549c9f7",
            "route_table_id": "rtb-0c3da961f1d2a11e2",
            "subnet_id": "subnet-019fa5ceb6084e77d"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1a",
            "aws_nat_gateway.natgw-1a-awx",
            "aws_route_table.rt-awx-private-1a",
            "aws_subnet.sn-private-1a-app",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1a-appelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08935f31d7549c9f7",
            "route_table_id": "rtb-0c3da961f1d2a11e2",
            "subnet_id": "subnet-019fa5ceb6084e77d"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1a",
            "aws_nat_gateway.natgw-1a-awx",
            "aws_route_table.rt-awx-private-1a",
            "aws_subnet.sn-private-1a-app",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1a-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090c179b9470680c3",
            "route_table_id": "rtb-0c3da961f1d2a11e2",
            "subnet_id": "subnet-0514f10fcda2f5c4e"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1a",
            "aws_nat_gateway.natgw-1a-awx",
            "aws_route_table.rt-awx-private-1a",
            "aws_subnet.sn-private-1a-db",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1a-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a7b97981753baa",
            "route_table_id": "rtb-0c3da961f1d2a11e2",
            "subnet_id": "subnet-0f16dff543c24d144"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1a",
            "aws_nat_gateway.natgw-1a-awx",
            "aws_route_table.rt-awx-private-1a",
            "aws_subnet.sn-private-1a-web",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1c-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04146e2b424a37d21",
            "route_table_id": "rtb-0c19887e4b59627e0",
            "subnet_id": "subnet-07968fed23d2d4f18"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1c",
            "aws_nat_gateway.natgw-1c-awx",
            "aws_route_table.rt-awx-private-1c",
            "aws_subnet.sn-private-1c-app",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1c-appelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04146e2b424a37d21",
            "route_table_id": "rtb-0c19887e4b59627e0",
            "subnet_id": "subnet-07968fed23d2d4f18"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1c",
            "aws_nat_gateway.natgw-1c-awx",
            "aws_route_table.rt-awx-private-1c",
            "aws_subnet.sn-private-1c-app",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1c-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3b9233f6ba29dad",
            "route_table_id": "rtb-0c19887e4b59627e0",
            "subnet_id": "subnet-0af41167c9e12c78a"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1c",
            "aws_nat_gateway.natgw-1c-awx",
            "aws_route_table.rt-awx-private-1c",
            "aws_subnet.sn-private-1c-db",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-private-1c-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0266f974758452725",
            "route_table_id": "rtb-0c19887e4b59627e0",
            "subnet_id": "subnet-0f50166efbea0033c"
          },
          "dependencies": [
            "aws_eip.eip-natgw-1c",
            "aws_nat_gateway.natgw-1c-awx",
            "aws_route_table.rt-awx-private-1c",
            "aws_subnet.sn-private-1c-web",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-1a-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a625d060186bc1f3",
            "route_table_id": "rtb-08ae9632fb6ece279",
            "subnet_id": "subnet-0e1bbf3e1bab2e9e3"
          },
          "dependencies": [
            "aws_internet_gateway.igw-awx",
            "aws_route_table.rt-awx-public",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-1a-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a625d060186bc1f3",
            "route_table_id": "rtb-08ae9632fb6ece279",
            "subnet_id": "subnet-0e1bbf3e1bab2e9e3"
          },
          "dependencies": [
            "aws_internet_gateway.igw-awx",
            "aws_route_table.rt-awx-public",
            "aws_subnet.sn-public-1a",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-1c-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2ef662752767cf",
            "route_table_id": "rtb-08ae9632fb6ece279",
            "subnet_id": "subnet-0c3257491ab4b63b3"
          },
          "dependencies": [
            "aws_internet_gateway.igw-awx",
            "aws_route_table.rt-awx-public",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn-associate-public-1c-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2ef662752767cf",
            "route_table_id": "rtb-08ae9632fb6ece279",
            "subnet_id": "subnet-0c3257491ab4b63b3"
          },
          "dependencies": [
            "aws_internet_gateway.igw-awx",
            "aws_route_table.rt-awx-public",
            "aws_subnet.sn-public-1c",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:security-group/sg-0f89a01c5cb860629",
            "description": "2-Tier APP security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f89a01c5cb860629",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07972fdca95b199ac"
                ],
                "self": false,
                "to_port": 81
              }
            ],
            "name": "SG-awx-private-app",
            "name_prefix": "",
            "owner_id": "613206437160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-appelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:security-group/sg-07972fdca95b199ac",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07972fdca95b199ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6594afc55ea2db3"
                ],
                "self": false,
                "to_port": 81
              }
            ],
            "name": "SG-awx-private-appelb",
            "name_prefix": "",
            "owner_id": "613206437160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-appelb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:security-group/sg-0c0d56db219923aa5",
            "description": "3-Tier DB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0d56db219923aa5",
            "ingress": [],
            "name": "SG-awx-private-db",
            "name_prefix": "",
            "owner_id": "613206437160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:security-group/sg-0d6594afc55ea2db3",
            "description": "1-Tier Web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6594afc55ea2db3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009f4044826968f28"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-awx-private-web",
            "name_prefix": "",
            "owner_id": "613206437160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-private-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-awx-public-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:security-group/sg-009f4044826968f28",
            "description": "Front-end Web - ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009f4044826968f28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SG-awx-public-webelb",
            "name_prefix": "",
            "owner_id": "613206437160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-awx-public-webelb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-app-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "HTTP",
            "from_port": 81,
            "id": "sgrule-1679944740",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f89a01c5cb860629",
            "self": false,
            "source_security_group_id": "sg-07972fdca95b199ac",
            "to_port": 81,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sg-awx-private-app",
            "aws_security_group.sg-awx-private-appelb",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-appelb-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "HTTP",
            "from_port": 81,
            "id": "sgrule-1841019909",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07972fdca95b199ac",
            "self": false,
            "source_security_group_id": "sg-0d6594afc55ea2db3",
            "to_port": 81,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sg-awx-private-appelb",
            "aws_security_group.sg-awx-private-web",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-private-web-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2997145348",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d6594afc55ea2db3",
            "self": false,
            "source_security_group_id": "sg-009f4044826968f28",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sg-awx-private-web",
            "aws_security_group.sg-awx-public-webelb",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-public-webelb-rule-HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-832600178",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-009f4044826968f28",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sg-awx-public-webelb",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-awx-public-webelb-rule-HTTPS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3858018600",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-009f4044826968f28",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sg-awx-public-webelb",
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-1a-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-019fa5ceb6084e77d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-019fa5ceb6084e77d",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-private-1a-APP"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-1a-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-0514f10fcda2f5c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0514f10fcda2f5c4e",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-private-1a-DB"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-1a-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-0f16dff543c24d144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f16dff543c24d144",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-private-1a-WEB"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-1c-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-07968fed23d2d4f18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-07968fed23d2d4f18",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-private-1c-APP"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-1c-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-0af41167c9e12c78a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0af41167c9e12c78a",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-private-1c-DB"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-private-1c-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-0f50166efbea0033c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f50166efbea0033c",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-private-1c-WEB"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-0e1bbf3e1bab2e9e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e1bbf3e1bab2e9e3",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-public-1a"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-public-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:subnet/subnet-0c3257491ab4b63b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c3257491ab4b63b3",
            "map_public_ip_on_launch": false,
            "owner_id": "613206437160",
            "tags": {
              "Name": "SN-public-1c"
            },
            "vpc_id": "vpc-0bb6e9d079d2b7bc5"
          },
          "dependencies": [
            "aws_vpc.vpc-awx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-awx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:613206437160:vpc/vpc-0bb6e9d079d2b7bc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de5b393dd123ad7d",
            "default_route_table_id": "rtb-0eb9122359333f9b8",
            "default_security_group_id": "sg-02ef66e01b837b2ab",
            "dhcp_options_id": "dopt-06e344afeed49e8f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bb6e9d079d2b7bc5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb9122359333f9b8",
            "owner_id": "613206437160",
            "tags": {
              "Name": "VPC-awx"
            }
          }
        }
      ]
    }
  ]
}